ci: improve parallelism of release.yaml workflow, improve build of CLI artifacts